ver 0.15.11 (2010/??/??)
* tags:
  - ape: support album artist
* decoders:
  - mp4ff: support tags "album artist", "albumartist", "band"
  - mikmod: fix memory leak
  - ffmpeg: free AVFormatContext on error
* playlist: emit IDLE_OPTIONS when resetting single mode
* listen: make get_remote_uid() work on BSD


ver 0.15.10 (2010/05/30)
* input:
  - mms: fix memory leak in error handler
  - mms: initialize the "eof" attribute
* decoders:
  - mad: properly calculate ID3 size without libid3tag


ver 0.15.9 (2010/03/21)
* decoders:
  - mad: fix crash when seeking at end of song
  - mpcdec: fix negative shift on fixed-point samples
  - mpcdec: fix replay gain formula with v8
* playlist: fix single+repeat in random mode
* player: postpone song tags during cross-fade


ver 0.15.8 (2010/01/17)
* input:
  - curl: allow rewinding with Icy-Metadata
* decoders:
  - ffmpeg, flac, vorbis: added more flac/vorbis MIME types
  - ffmpeg: enabled libavformat's file name extension detection
* dbUtils: return empty tag value only if no value was found
* decoder_thread: fix CUE track playback
* queue: don't repeat current song in consume mode


ver 0.15.7 (2009/12/27)
* archive:
  - close archive when stream is closed
  - iso, zip: fixed memory leak in destructor
* input:
  - file: don't fall back to parent directory
  - archive: fixed memory leak in error handler
* tags:
  - id3: fix ID3v1 charset conversion
* decoders:
  - eliminate jitter after seek failure
  - ffmpeg: don't try to force stereo
  - wavpack: allow fine-grained seeking
* mixer: explicitly close all mixers on shutdown
* mapper: fix memory leak when playlist_directory is not set
* mapper: apply filesystem_charset to playlists
* command: verify playlist name in the "rm" command
* database: return multiple tag values per song


ver 0.15.6 (2009/11/18)
* input:
  - lastfm: fixed variable name in GLib<2.16 code path
  - input/mms: require libmms 0.4
* archive:
  - zzip: require libzzip 0.13
* tags: