@@ -5,6 +5,7 @@ ver 0.15.11 (2010/??/??)
   - mp4ff: support tags "album artist", "albumartist", "band"
   - mikmod: fix memory leak
   - ffmpeg: free AVFormatContext on error
+  - ffmpeg: read more metadata
 * playlist: emit IDLE_OPTIONS when resetting single mode
 * listen: make get_remote_uid() work on BSD
 
